--- a/src/app/features/dashboard/house/house-blue/house-blue.component.scss
+++ b/src/app/features/dashboard/house/house-blue/house-blue.component.scss
@@ -20,6 +20,9 @@ p {
     h3,p {
       color: white;
     }
+    p {
+      font-size: 18px;
+    }
   }
 }
 
